k8s-manifests/backend/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: default
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
